# token2022-amm

./: .gitignore  Anchor.toml  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
app/: app.tsx  globals.css  layout.tsx
app/components/: Header.tsx  PoolCreator.tsx  PoolCreator.tsx.backup  PoolCreator.tsx.backup2  StatsOverview.tsx  SwapInterface.tsx  TokenCreator.tsx  WalletProvider.tsx
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: deploy.ts
utils/: solana.ts
